<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="enable_button_map"
        android:title="@string/pref_title_enable_button_map">
        <intent android:action="android.settings.ACCESSIBILITY_SETTINGS" />
    </Preference>

    <PreferenceCategory
        android:title="@string/pref_portrait_config_title">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_back_button_action_titles"
            android:entryValues="@array/pref_back_button_action_values"
            android:key="back_button_action_portrait"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_back_button_action" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_switch_app_button_action_titles"
            android:entryValues="@array/pref_switch_app_button_action_values"
            android:key="switch_app_button_action_portrait"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_switch_app_button_action" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_buttons_left_config_title">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_back_button_action_titles"
            android:entryValues="@array/pref_back_button_action_values"
            android:key="back_button_action_buttons_left"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_back_button_action" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_switch_app_button_action_titles"
            android:entryValues="@array/pref_switch_app_button_action_values"
            android:key="switch_app_button_action_buttons_left"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_switch_app_button_action" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_buttons_right_config_title">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_back_button_action_titles"
            android:entryValues="@array/pref_back_button_action_values"
            android:key="back_button_action_buttons_right"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_back_button_action" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_switch_app_button_action_titles"
            android:entryValues="@array/pref_switch_app_button_action_values"
            android:key="switch_app_button_action_buttons_right"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_switch_app_button_action" />

    </PreferenceCategory>

</PreferenceScreen>
